# nimbus-diffusion

./: .gitignore  README.md
.github/workflows/: build.yml
installer/: NimbusDiffusion.iss
ofx/: CMakeLists.txt  install.bat  install.sh
ofx/src/: NimbusDiffusor.cpp
